# scripting

./: .gitignore  index.html
seinfeld/: example.txt  get_data.py  parse_text.py  parsed_lines.json  plan.py  plots.py  pyproject.toml
