[project]
name = "seinfeld"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "carterwward", email = "Carter.Ward@uvm.edu"},
]
dependencies = ["labMTsimple>=2.8.8", "jinja2>=3.1.6", "numpy>=2.3.2", "requests>=2.32.4", "bs4>=0.0.2", "pandas[pyarrow]>=2.3.2", "plotly>=6.3.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
